--- a/Rus/И другие существа.md
+++ b/Rus/И другие существа.md
@@ -3,3 +3,24 @@
 # Суффиксы причастий + образование
 ![3a3c12103c6ae1b27b64e66662c3979e.png](../_resources/ab18c59547f14128acbe584d92fbfe02.png)
 
+# Вводность
+
+Союзы `а, и,` реже `но,` если они составляют одно целое с последующим вводным словом, не отделяются запятой, например
+*А значит, а следовательно, но стало быть, но конечно и т. п.*
+
+# Исключения причастия
+Названый брат, посажёный отец, смышлёный ребенок
+Деланный, желанный, жеманный, медленный, священный, чванный, чеканный
+Невиданный, негаданный, нежданный, неслыханный, нечаянный, недреманный и нек. др.
+
+Кованый, жёваный, клёваный
+Подкованный, разжёванный, исклёванный
+
+# Интересные штучки
+Оба - собирательное числительное
+Вчетверо <- от слова четверо (приставочно-суффиксальный)
+Если хотите знать, я тренируюсь каждый день. Простое предложение [ ]
+Вестибюль
+Жесток <- корень + окончание
+Треть - существительное
+Фойе - ср. род
